--- a/calculator.html
+++ b/calculator.html
@@ -20,19 +20,19 @@
             <button>1</button>
             <button>2</button>
             <button>3</button>
+            <button>%</button>
             <button>4</button>
             <button>5</button>
             <button>6</button>
+            <button>X</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>10</button>
-            <button>11</button>
-            <button>12</button>
-            <button>13</button>
-            <button>14</button>
-            <button>15</button>
-            <button>16</button>
+            <button>-</button>
+            <button>.</button>
+            <button>0</button>
+            <button>=</button>
+            <button>+</button>
         </div>
 
     </div>
