--- a/calculator.html
+++ b/calculator.html
@@ -13,9 +13,14 @@
 <body>
     <div class="container">
         <div class="screen">
-            <div class="lasOperation"><h5>placeholder</h5></div>
-            <div class="currentOperation"><h3>placeholder</h3></div>
+            <div class="lasOperation">
+                <h5>123</h5>
+            </div>
+            <div class="currentOperation">
+                <h3>5525</h3>
+            </div>
         </div>
+
         <div class="buttonsMap">
             <button>1</button>
             <button>2</button>
@@ -34,7 +39,7 @@
             <button>=</button>
             <button>+</button>
         </div>
-
+        <button class="clear">Clear</button>
     </div>
 </body>
 
