--- a/calculator.html
+++ b/calculator.html
@@ -17,29 +17,29 @@
                 <h5>123</h5>
             </div>
             <div class="currentOperation">
-                <h3>5525</h3>
+                <h3></h3>
             </div>
         </div>
 
         <div class="buttonsMap">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>%</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>X</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>-</button>
-            <button>.</button>
-            <button>0</button>
-            <button>=</button>
-            <button>+</button>
+            <button class="numberBtn">1</button>
+            <button class="numberBtn">2</button>
+            <button class="numberBtn">3</button>
+            <button class="operateBtn">%</button>
+            <button class="numberBtn">4</button>
+            <button class="numberBtn">5</button>
+            <button class="numberBtn">6</button>
+            <button class="operateBtn">X</button>
+            <button class="numberBtn">7</button>
+            <button class="numberBtn">8</button>
+            <button class="numberBtn">9</button>
+            <button class="operateBtn">-</button>
+            <button class="numberBtn">.</button>
+            <button class="numberBtn">0</button>
+            <button class="equalsBtn">=</button>
+            <button class="operateBtn">+</button>
         </div>
-        <button class="clear">Clear</button>
+        <button class="clearBtn">Clear</button>
     </div>
 </body>
 
