--- a/calculator.html
+++ b/calculator.html
@@ -13,23 +13,19 @@
 <body>
     <div class="container">
         <div class="screen">
-            <div class="lasOperation">
-                <h5>123</h5>
-            </div>
-            <div class="currentOperation">
-                <h3></h3>
-            </div>
+            <div class="lastOperation"></div>
+            <div class="currentOperation">0</div>
         </div>
 
         <div class="buttonsMap">
             <button class="numberBtn">1</button>
             <button class="numberBtn">2</button>
             <button class="numberBtn">3</button>
-            <button class="operateBtn">%</button>
+            <button class="operateBtn">/</button>
             <button class="numberBtn">4</button>
             <button class="numberBtn">5</button>
             <button class="numberBtn">6</button>
-            <button class="operateBtn">X</button>
+            <button class="operateBtn">*</button>
             <button class="numberBtn">7</button>
             <button class="numberBtn">8</button>
             <button class="numberBtn">9</button>
